--- a/src/Index.html
+++ b/src/Index.html
@@ -19,18 +19,28 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Inicio</a>
+                <a class="nav-link" aria-current="page" href="Index.html">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="adopta.php">Adopta</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Refugios</a>
+                <a class="nav-link" href="refugios.php">Refugios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link">Registro</a>
+                <a class="nav-link" href="registro.php">Registro</a>
               </li>
             </ul>
+          </div>
+          <div class="user-container">
+            <img src="../assets/images/foto-user.jpg" alt="Foto del usuario">
+            <div class="user-dropdown">
+              <ul>
+                <li><a href="#">Mi perfil</a></li>
+                <li><a href="#">Configuración</a></li>
+                <li><a href="#">Cerrar sesión</a></li>
+              </ul>
+            </div>
           </div>
         </div>
       </nav>
