menu usuario funcional

--- a/src/Index.html
+++ b/src/Index.html
@@ -7,7 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/style.css">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <title>Pagina principa Adopciones</title>
+<script src="./js/menu-usuario.js"></script>
+<title>Pagina principa Adopciones</title>
 </head>
 <body>
     <nav id ="fondo-menu" class="navbar navbar-expand-lg ">
@@ -32,8 +33,9 @@
               </li>
             </ul>
           </div>
-          <div class="user-container">
-            <img src="../assets/images/foto-user.jpg" alt="Foto del usuario">
+          <!--Menú del usuario-->
+          <div class="user-container" id="user-menu">
+            <img src="../assets/images/foto-user.jpg" alt="Foto del usuario" id="user-img">
             <div class="user-dropdown">
               <ul>
                 <li><a href="#">Mi perfil</a></li>
@@ -44,5 +46,6 @@
           </div>
         </div>
       </nav>
+      
 </body>
 </html>
