creacion de formulario usuario y conexion a bd

--- a/src/Index.html
+++ b/src/Index.html
@@ -11,6 +11,10 @@
 <title>Pagina principa Adopciones</title>
 </head>
 <body>
+  <!--Menú---->
+  <?php
+		include 'conexion.php'; // Archivo PHP que contiene la conexión a la base de datos
+	?>
     <nav id ="fondo-menu" class="navbar navbar-expand-lg ">
         <div class="container-fluid ">
           <img src="../assets/images/logo_company.PNG" alt="Logo de Adopciones"  class="logo">
