--- a/app/Index.html
+++ b/app/Index.html
@@ -36,6 +36,8 @@
                 <a class="nav-link" href="registro.php">Registro</a>
               </li>
             </ul>
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
           </div>
           <!--Menú del usuario-->
           <div class="user-container" id="user-menu">
