--- a/app/Index.html
+++ b/app/Index.html
@@ -36,8 +36,19 @@
                 <a class="nav-link" href="registro.php">Registro</a>
               </li>
             </ul>
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <div class="row">
+              <div class="col-auto">
+                <!-- Menú aquí -->
+              </div>
+              <div class="row ms-auto me-2">
+                <form class="form-inline">
+                  <input class='search' class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+              </div>
+              
+            </div>
+            
           </div>
           <!--Menú del usuario-->
           <div class="user-container" id="user-menu">
