--- a/app/Index.html
+++ b/app/Index.html
@@ -55,8 +55,8 @@
             <img src="../assets/images/foto-user.jpg" alt="Foto del usuario" id="user-img">
             <div class="user-dropdown" id="user-menu">
               <ul>
-                <li><a href="#">Mi perfil</a></li>
-                <li><a href="#">Configuración</a></li>
+                <li><a href="./desplegable_usuario/mi_perfil.php">Mi perfil</a></li>
+                <li><a href="./desplegable_usuario/conf_usuario.php">Configuración</a></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle">Más opciones</a>
                   <ul class="dropdown-menu">
@@ -65,7 +65,7 @@
                     <li><a href="#">Opción 3</a></li>
                   </ul>
                 </li>
-                <li><a href="#">Cerrar sesión</a></li>
+                <li><a href="./desplegable_usuario/cerrar_sesion.php">Cerrar sesión</a></li>
               </ul>
             </div>
           </div>
