--- a/src/Index.html
+++ b/src/Index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="../assets/style.css">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 <script src="./js/menu-usuario.js"></script>
-<title>Pagina principa Adopciones</title>
+<!--<script src="./js/registro.js"></script>-->
+<title>Pagina principal Adopciones</title>
 </head>
 <body>
   <!--Menú---->
