--- a/app/Index.html
+++ b/app/Index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../assets/style.css">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 <script src="./js/menu-usuario.js"></script>
+<script src="./js/carrusel-animales.js"></script>
 <!--<script src="./js/registro.js"></script>-->
 <title>Pagina principal Adopciones</title>
 </head>
@@ -78,8 +79,6 @@
       </nav>
 
 
-      <?php if(basename($_SERVER['PHP_SELF']) == "index.html"): ?>
-           <h1 class="carrusel">Contenido del carrusel</h1>
-      <?php endif; ?>
+      
 </body>
 </html>
