--- a/app/Index.html
+++ b/app/Index.html
@@ -51,7 +51,7 @@
           <div class="row ms-auto me-2">
             <form class="form-inline">
               <input class='search' class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              <button class="btn btn-outline-success my-2 my-sm-0" id="boton-busqueda" type="submit">Search</button>
             
             </form>
           </div>
