--- a/app/Index.html
+++ b/app/Index.html
@@ -19,7 +19,7 @@
 	?>
     <nav id ="fondo-menu" class="navbar navbar-expand-lg ">
         <div class="container-fluid ">
-          <img src="../assets/images/logo_company.PNG" alt="Logo de Adopciones"  class="logo">
+          <img src="../assets/images/logo4.PNG" alt="Logo de Adopciones"  class="logo">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
