--- a/app/Index.html
+++ b/app/Index.html
@@ -1,3 +1,7 @@
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -38,7 +42,7 @@
                 <a class="nav-link" href="refugios.php">Refugios</a>
               </li> -->
               <li class="nav-item">
-                <a class="nav-link" href="registro.php">Registro</a>
+                <a class="nav-link" href="registro.php">Registro de refugios</a>
               </li>
             </ul>
             <div class="row">
@@ -77,6 +81,14 @@
           </div>
         </div>
       </nav>
+
+
+
+
+
+<!--Carrusel-->
+
+  
 
 
       
