--- a/app/Index.html
+++ b/app/Index.html
@@ -191,6 +191,7 @@
     <div class="carousel-item">
 
       <div class="d-flex">
+
         <div class="col">
           <div class="card">
             <img src="../assets/mascotas/perros/Chupito.avif" class="card-img-top" alt="Chupito">
@@ -201,6 +202,30 @@
               <a href="#" class="boton-animales">Adóptame!</a>
             </div>
           </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../assets/mascotas/gatos/Dorme.avif" class="card-img-top" alt="Dorme">
+            <div class="card-body">
+              <h5 class="card-title">Dorme</h5>
+              <p class="card-text">Edad: 4 años</p>
+              <p class="desc-animal">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius, quas.</p>
+              <a href="#" class="boton-animales">Adóptame!</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+        <div class="card">
+					<img src="../assets/mascotas/gatos/Croqueta.avif" class="card-img-top" alt="Croqueta">
+					<div class="card-body">
+						<h5 class="card-title">Croqueta</h5>
+						<p class="card-text">Edad: 3 años</p>
+						<p class="desc-animal">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius, quas.</p>
+						<a href="#" class="boton-animales">Adóptame!</a>
+					</div>
+        </div>
+
+
 
       </div>
       
