--- a/app/Index.html
+++ b/app/Index.html
@@ -31,22 +31,22 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="carrusel_inicio.php">Inicio</a>
+            <a class="nav-link" aria-current="page" href="./secciones/carrusel_inicio.php">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="mascotas.php">Mascotas</a>
+            <a class="nav-link" aria-current="page" href="./secciones/mascotas.php">Mascotas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="adopta.php">Adopta</a>
+            <a class="nav-link" href="./secciones/adopta.php">Adopta</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="voluntariado.php">Voluntariado</a>
+            <a class="nav-link" href="./secciones/voluntariado.php">Voluntariado</a>
           </li>
           <!-- <li class="nav-item">
                 <a class="nav-link" href="refugios.php">Refugios</a>
               </li> -->
           <li class="nav-item">
-            <a class="nav-link" href="registro.php">Registro de refugios</a>
+            <a class="nav-link" href="./formularios/registro.php">Registro de refugios</a>
           </li>
         </ul>
         <div class="row">
